--- a/audio/es/0006_anansi-y-la-sabiduría_audio-slides.html
+++ b/audio/es/0006_anansi-y-la-sabiduría_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title></title>
+  <title>Anansi y la sabiduría - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -60,10 +60,10 @@
      https://developer.mozilla.org/en/CSS/CSS_transitions
      How to use CSS3 Transitions: */
   section {
-      -moz-transition: left 400ms linear 0s;
-      -webkit-transition: left 400ms linear 0s;
-      -ms-transition: left 400ms linear 0s;
-      transition: left 400ms linear 0s;
+      -moz-transition: left 100ms linear 0s;
+      -webkit-transition: left 100ms linear 0s;
+      -ms-transition: left 100ms linear 0s;
+      transition: left 100ms linear 0s;
   }
 
   /* Before */
@@ -87,17 +87,19 @@
 </head>
 <body>
 
-<section id="anansi-y-sabiduria" class="slide level1">
-<h1>Anansi y sabiduría</h1>
+<section id="anansi-y-la-sabiduria" class="slide level1">
+<h1>Anansi y la sabiduría</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
-
+  
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>Hace mucho, mucho tiempo las personas no supieron cualquier cosa. No sabían cómo cultivar, o cómo tejer tela, o cómo hacer herramientas de hierro. El dios Nyame arriba en el cielo tenía toda la sabiduría del mundo. La mantenía seguro en un tarro de barro.</p>
+<p>Hace mucho, mucho tiempo las personas no sabían nada. No sabían cómo cultivar, o cómo tejer tela, o cómo hacer herramientas de hierro. El dios Nyame arriba en el cielo tenía toda la sabiduría del mundo. La mantenía segura en una vasija de barro.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +108,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>Un día, Nyame decidió que le daría el tarro de sabiduría a Anansi. Cada vez Anansi miraba en el tarro de barro, aprendía algo nuevo. ¡Qué apasionante!</p>
+<p>Un día, Nyame decidió que le daría la vasija de la sabiduría a Anansi. Cada vez que Anansi miraba dentro de la vasija de barro, aprendía algo nuevo. ¡Qué apasionante!</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +118,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Codicioso Anansi pensó, “voy a mantener el tarro seguro en la parte superior de un árbol alto. ¡Entonces lo puedo tener todo para mi!” Hiló un hilo largo, lo enrolló por el tarro de barro, y lo ligó a su estómago. Empezó a subir el árbol. Pero fue duro subir el árbol con el tarro que le chocaba en las rodillas todo el tiempo.</p>
+<p>El codicioso Anansi pensó, “voy a mantener la vasija segura en la copa de un árbol alto. ¡Entonces la puedo tener toda para mi!” Hiló un hilo largo, envolvió con él la vasija de barro, y lo ató a su estómago. Empezó a trepar el árbol. Pero era difícil trepar el árbol con la vasija pegándole en las rodillas todo el tiempo.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +128,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>Todo este tiempo el joven hijo de Anansi había estado mirando en el fondo del árbol. Dijo, “no sería más fácil subir si te ligaste el tarro a tu espalda en cambio?” Anansi intentó ligar el tarro de barro lleno de sabiduría a su espalda, y realmente era mucho más fácil.</p>
+<p>Todo este tiempo el joven hijo de Anansi había estado mirando desde la base del árbol. Dijo, “¿no sería más fácil trepar si te ataras la vasija a tu espalda?” Anansi intentó atar la vasija de barro llena de sabiduría a su espalda, y realmente fue mucho más fácil.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +138,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>En un instante llegó a la parte superior del árbol. Pero entonces paró y pensó, “se supone que soy yo quien tiene toda la sabiduría, y aquí mi hijo fue más listo que yo!” Anansi se puso tan enojado por esto que echó el tarro de barro abajo fuera del árbol.</p>
+<p>En un instante llegó a la copa del árbol. Pero entonces se detuvo y pensó, “se supone que soy yo quien tiene toda la sabiduría, ¡y aquí mi hijo fue más listo que yo!” Anansi se enojó tanto por esto que lanzó la vasija de barro hacia abajo, fuera del árbol.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +148,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>Se rompió en pedazos en la tierra. La sabiduría era libre para todo el mundo para compartir. Y así es cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
+<p>Se rompió en pedazos en el suelo. La sabiduría fue libre para que todo el mundo la compartiera. Y es así cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0006_anansi-y-la-sabiduría/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -150,12 +157,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="anansi-y-sabiduria-1">Anansi y sabiduría</h2>
-Text: Cuento de Ghana<br> Illustrations: Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Spanish<br>
+<h2 id="anansi-y-la-sabiduria-1">Anansi y la sabiduría</h2>
+<strong>Texto:</strong> Cuento de Ghana<br> <strong>Ilustración:</strong> Wiehan de Jager<br> <strong>Traducción:</strong> Felipe Bañados Schwerter<br> <strong>Idioma:</strong> Español<br> <strong>Read by:</strong> Áurea Vericat<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
@@ -254,8 +261,8 @@ You can view the original story on the ASP website <a href='http://africanstoryb
       Dz.params[keyVal[0]] = decodeURIComponent(keyVal[1]);
     });
   // Specific params handling
-    if (!+this.params.autoplay)
-      $$.forEach($$("video"), function(v){ v.controls = true });
+//     if (!+this.params.autoplay)
+//       $$.forEach($$("video"), function(v){ v.controls = true });
   }
 
   Dz.onkeydown = function(aEvent) {
@@ -390,6 +397,16 @@ You can view the original story on the ASP website <a href='http://africanstoryb
           video.play();
         } else {
           video.pause();
+          video.currentTime = 0;
+        }
+      }
+      var audio = s.$("audio");
+      if (audio) {
+        if (audio.ended || audio.paused) {
+          audio.play();
+        } else {
+          audio.pause();
+          audio.currentTime = 0;
         }
       }
     }
@@ -469,6 +486,12 @@ You can view the original story on the ASP website <a href='http://africanstoryb
       var video = old.$("video");
       if (video) {
         video.pause();
+        video.currentTime = 0;
+      }
+      var audio = old.$("audio");
+      if (audio) {
+        audio.pause();
+        audio.currentTime = 0;
       }
     }
     if (next) {
@@ -476,6 +499,10 @@ You can view the original story on the ASP website <a href='http://africanstoryb
       var video = next.$("video");
       if (video && !!+this.params.autoplay) {
         video.play();
+      }
+      var audio = next.$("audio");
+      if (audio && !!+this.params.autoplay) {
+        audio.play();
       }
     } else {
       // That should not happen
