audio index - add anchors

--- a/audio/index.html
+++ b/audio/index.html
@@ -20,7 +20,7 @@
       <td><img style="vertical-align:top; height:50%" src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg" /></td></tr></table>
 
       <h2>List of stories by language</h2>
-        <h3>Chinese (Mandarin) [中文]</h3>
+        <h3><a name="zh"></a>Chinese (Mandarin) [中文]</h3>
           <ul>
             <li><a href="zh/0001_一个很高的人_audio-slides.html" target="_blank">一个很高的人</a></li>
             <li><a href="zh/0002_看看农场动物_audio-slides.html" target="_blank">看看农场动物</a></li>
@@ -42,7 +42,7 @@
             <li><a href="zh/0231_气象书_audio-slides.html" target="_blank">气象书</a></li>
             <li><a href="zh/0248_我去动物园_audio-slides.html" target="_blank">我去动物园</a></li>
           </ul>
-        <h3>Esperanto [Esperanto]</h3>
+        <h3><a name="eo"></a>Esperanto [Esperanto]</h3>
           <ul>
             <li><a href="eo/0001_altulo_audio-slides.html" target="_blank">Altulo</a></li>
             <li><a href="eo/0003_lernejaj-vestaĵoj_audio-slides.html" target="_blank">Lernejaj vestaĵoj</a></li>
@@ -52,7 +52,7 @@
             <li><a href="eo/0253_mia_bildlibro_audio-slides.html" target="_blank">Mia bildlibro</a></li>
             <li><a href="eo/0302_fajro_audio-slides.html" target="_blank">Fajro</a></li>
           </ul>
-        <h3>Gujarati [ગુજરાતી]</h3>
+        <h3><a name="gu"></a>Gujarati [ગુજરાતી]</h3>
           <ul>
             <li><a href="gu/0003_નિશાડ-ના-કપડા_audio-slides.html" target="_blank">નિશાડ ના કપડા</a></li>
             <li><a href="gu/0007_પાનિ-ગોત્વાનુ_audio-slides.html" target="_blank">પાનિ ગોત્વાનુ.</a></li>
@@ -63,7 +63,7 @@
             <li><a href="gu/0093_મારો-બાબ્લો_audio-slides.html" target="_blank">મારો બાબ્લો</a></li>
             <li><a href="gu/0127_વિવિધ-નાતકો_audio-slides.html" target="_blank">વિવિધ નાતકો</a></li>
           </ul>
-        <h3>Norwegian (Bokmål)</h3>
+        <h3><a name="no"></a>Norwegian (Bokmål)</h3>
           <ul>
             <li><a href="no/0001_en-veldig-høy-mann_audio-slides.html" target="_blank">En veldig høy mann</a></li>
             <li><a href="no/0002_se-på-dyrene_audio-slides.html" target="_blank">Se på dyrene</a></li>
@@ -84,12 +84,12 @@
             <li><a href="no/0271_to_audio-slides.html" target="_blank">To</a></li>
             <li><a href="no/0287_herr-flue-og-herr-storhode_audio-slides.html" target="_blank">Herr Flue og herr Storhode</a></li>
           </ul>
-        <h3>Norwegian (Nynorsk)</h3>
+        <h3><a name="nn"></a>Norwegian (Nynorsk)</h3>
           <ul>
             <li><a href="nn/0001_ein-veldig-høg-mann_audio-slides.html" target="_blank">Ein veldig høg mann</a></li>
             <li><a href="nn/0003_skuleklede_audio-slides.html" target="_blank">Skuleklede</a></li>
           </ul>
-        <h3>Persian [فارسی]</h3>
+        <h3><a name="fa"></a>Persian [فارسی]</h3>
           <ul>
             <li><a href="fa/0007_در-جستجوی-آب_audio-slides.html" target="_blank">در جستجوی آب</a></li>
             <li><a href="fa/0008_چه-کار-داری-میکنی‌_audio-slides.html" target="_blank">چه کار داری میکنی‌؟</a></li>
@@ -104,7 +104,7 @@
             <li><a href="fa/0302_آتش_audio-slides.html" target="_blank">آتش</a></li>
             <li><a href="fa/0309_کوچک-و-بزرگ_audio-slides.html" target="_blank">کوچک و بزرگ</a></li>
           </ul>
-        <h3>Spanish [Español]</h3>
+        <h3><a name="es"></a>Spanish [Español]</h3>
           <ul>
             <li><a href="es/0006_anansi_y_la_sabiduría_audio-slides.html" target="_blank">Anansi y la sabiduría</a></li>
             <li><a href="es/0007_buscando-agua_audio-slides.html" target="_blank">Buscando agua</a></li>
@@ -117,7 +117,7 @@
             <li><a href="es/0302_el-fuego_audio-slides.html" target="_blank">El fuego</a></li>
             <li><a href="es/0327_contar-animales_audio-slides.html" target="_blank">Contar animales</a></li>
           </ul>
-        <h3>Swedish [svenska]</h3>
+        <h3><a name="sv"></a>Swedish [svenska]</h3>
           <ul>
             <li><a href="sv/0009_var-är-min-katt_audio-slides.html" target="_blank">Var är min katt?</a></li>
             <li><a href="sv/0087_jag-gillar-att-läsa_audio-slides.html" target="_blank">Jag gillar att läsa!</a></li>
