--- a/stories/index.html
+++ b/stories/index.html
@@ -1749,6 +1749,12 @@
       <td><a name="es0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0050</td>
+      <td><a href="/stories/es/0050_qué-tipo-de-dientes_slides.html" target="_blank">¿Qué tipo de dientes?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0050"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/es/0087_me-gusta-leer_slides.html" target="_blank">¡Me gusta leer!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1964,6 +1970,12 @@
       <td><a href="http://my.africanstorybook.org/stories/rainbow">The Rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#or0049">or</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+    </tr>
+    <tr>
+      <td>0050</td>
+      <td><a href="http://my.africanstorybook.org/stories/what-type-teeth">What type of teeth?</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#es0050">es</a></td>
     </tr>
     <tr>
       <td>0053</td>
