--- a/stories/es/0050_qué-tipo-de-dientes-son.html
+++ b/stories/es/0050_qué-tipo-de-dientes-son.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>¿Qué tipo de dientes?</title>
+    <title>¿Qué tipo de dientes son?</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/01.jpg" />
 
-<h1 id="qu-tipo-de-dientes">¿Qué tipo de dientes?</h1>
+<h1 id="qu-tipo-de-dientes-son">¿Qué tipo de dientes son?</h1>
 
 Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Florence<br>Español</div><div class="pagebreak">
 
@@ -84,26 +84,26 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Fl
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/07.jpg" /></p>
 
-<p>Ratas tienen dientes de frente muy grandes.</p>
+<p>Ratas tienen dientes frontales muy grandes.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/08.jpg" /></p>
 
-<p>Yo tenía un diente de frente.</p>
+<p>Yo tenía un diente frontal.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/09.jpg" /></p>
 
-<p>¡Mi diente de frente se cayó! ¿Cuántos dientes tienes tú?</p>
+<p>¡Mi diente frontal se cayó! ¿Cuántos dientes tienes tú?</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Texto:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Florence<br /><strong>Ilustración:</strong> Rob Owen<br /><strong>Traducción:</strong> Áurea Vericat<br /><strong>Idioma:</strong> Español</p>
+<p><strong>Texto:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Florence<br /><strong>Ilustración:</strong> Rob Owen<br /><strong>Traducción:</strong> Áurea Vericat, Espen Stranger-Johannessen<br /><strong>Idioma:</strong> Español</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/what-type-teeth">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
