--- a/stories/yue/0215_早餐_slides.html
+++ b/stories/yue/0215_早餐_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0215/03.jpg" /></p>
-<p>我鍾意食玉米片。</p>
+<p>我鍾意食粟米片。</p>
 <center>
 <strong>2</strong>
 </center>
