--- a/stories/es/0050_qué-tipo-de-dientes-son_slides.html
+++ b/stories/es/0050_qué-tipo-de-dientes-son_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>¿Qué tipo de dientes? - Global African Storybook</title>
+  <title>¿Qué tipo de dientes son? - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="qué-tipo-de-dientes" class="slide level1">
-<h1>¿Qué tipo de dientes?</h1>
+<section id="qué-tipo-de-dientes-son" class="slide level1">
+<h1>¿Qué tipo de dientes son?</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/01.jpg" />
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/07.jpg" /></p>
-<p>Ratas tienen dientes de frente muy grandes.</p>
+<p>Ratas tienen dientes frontales muy grandes.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/08.jpg" /></p>
-<p>Yo tenía un diente de frente.</p>
+<p>Yo tenía un diente frontal.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/09.jpg" /></p>
-<p>¡Mi diente de frente se cayó! ¿Cuántos dientes tienes tú?</p>
+<p>¡Mi diente frontal se cayó! ¿Cuántos dientes tienes tú?</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<h2 id="qué-tipo-de-dientes-1">¿Qué tipo de dientes?</h2>
-<strong>Texto:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Florence<br> <strong>Ilustración:</strong> Rob Owen<br> <strong>Traducción:</strong> Áurea Vericat<br> <strong>Idioma:</strong> Español<br>
+<h2 id="qué-tipo-de-dientes-son-1">¿Qué tipo de dientes son?</h2>
+<strong>Texto:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Florence<br> <strong>Ilustración:</strong> Rob Owen<br> <strong>Traducción:</strong> Áurea Vericat, Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
