--- a/stories/index.html
+++ b/stories/index.html
@@ -1750,7 +1750,7 @@
     </tr>
     <tr>
       <td>0050</td>
-      <td><a href="/stories/es/0050_qué-tipo-de-dientes_slides.html" target="_blank">¿Qué tipo de dientes?</a></td>
+      <td><a href="/stories/es/0050_qué-tipo-de-dientes-son_slides.html" target="_blank">¿Qué tipo de dientes son?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0050"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
