link and page corrections

--- a/stories/es/0050_qué-tipo-de-dientes-son.html
+++ b/stories/es/0050_qué-tipo-de-dientes-son.html
@@ -77,7 +77,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek, Abu Enock, Dudu Mary, Ajuru Fl
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/06.jpg" /></p>
 
-<p>Un pájaro no tiene dientes. ¿Cómo come un pájaro?</p>
+<p>Un ave no tiene dientes. ¿Cómo come un ave?</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
