--- a/stories/es/0050_qué-tipo-de-dientes-son_slides.html
+++ b/stories/es/0050_qué-tipo-de-dientes-son_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0050/06.jpg" /></p>
-<p>Un pájaro no tiene dientes. ¿Cómo come un pájaro?</p>
+<p>Un ave no tiene dientes. ¿Cómo come un ave?</p>
 <center>
 <strong>5</strong>
 </center>
