--- a/stories/index.html
+++ b/stories/index.html
@@ -909,12 +909,6 @@
       <td><a name="gu0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
-      <td>0007</td>
-      <td><a href="/stories/gu/0007_પાનિ-ગોત્વાનુ_slides.html" target="_blank">પાનિ ગોત્વાનુ</a></td>
-      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
-      <td><a name="gu0007"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-    </tr>
-    <tr>
       <td>0008</td>
       <td><a href="/stories/gu/0008_તુ-શુ-કરે-છે_slides.html" target="_blank">તુ શુ કરે છે?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1939,7 +1933,7 @@
       <td>0007</td>
       <td><a href="http://my.africanstorybook.org/stories/looking-water">Looking for water</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#fa0007">fa</a>, <a href="#gu0007">gu</a>, <a href="#nn0007">nn</a>, <a href="#no0007">no</a>, <a href="#or0007">or</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
+      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#fa0007">fa</a>, <a href="#nn0007">nn</a>, <a href="#no0007">no</a>, <a href="#or0007">or</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
     </tr>
     <tr>
       <td>0008</td>
