--- a/stories/gu/0002_પ્રાણિઓ-ને-જો_slides.html
+++ b/stories/gu/0002_પ્રાણિઓ-ને-જો_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
-<p>ગાય &quot;મૂ&quot; કરે.</p>
+<p>ગાય &quot;રાંરાં&quot; કરે.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
-<p>બક્રી &quot;મે, મે&quot; કરે.</p>
+<p>બક્રી &quot;મીમી&quot; કરે.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
-<p>ઘોડો &quot;નેઇ&quot; કરે.</p>
+<p>ઘોડો &quot;હીહી&quot; કરે.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
-<p>સુવર &quot;ગ્રંટ&quot; કરે.</p>
+<p>સુવર &quot;ચીચી&quot; કરે.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
-<p>કુકદી &quot;ક્લક&quot; કરે.</p>
+<p>કુકદી &quot;કુકડુ&quot; કરે.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
-<p>કુતરો &quot;વુફ&quot; કરે.</p>
+<p>કુતરો &quot;ભોભો&quot; કરે.</p>
 <center>
 <strong>7</strong>
 </center>
