--- a/stories/index.html
+++ b/stories/index.html
@@ -881,6 +881,18 @@
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsT1B4SmI5WHc5Zlk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="de0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/de/0129_mein-fauler-kleiner-bruder_slides.html" target="_blank">Mein fauler kleiner Bruder</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsT1B4SmI5WHc5Zlk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0215</td>
+      <td><a href="/stories/de/0215_frühstück_slides.html" target="_blank">Frühstück</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsT1B4SmI5WHc5Zlk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0215"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -2089,7 +2101,7 @@
       <td>0129</td>
       <td><a href="http://my.africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0129">gu</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#de0129">de</a>, <a href="#gu0129">gu</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -2191,7 +2203,7 @@
       <td>0215</td>
       <td><a href="http://my.africanstorybook.org/stories/breakfast">Breakfast</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#gu0215">gu</a>, <a href="#yue0215">yue</a>, <a href="#zh0215">zh</a></td>
+      <td><a href="#de0215">de</a>, <a href="#gu0215">gu</a>, <a href="#yue0215">yue</a>, <a href="#zh0215">zh</a></td>
     </tr>
     <tr>
       <td>0223</td>
