--- a/stories/de/0009_wo_ist_meine_katze_slides.html
+++ b/stories/de/0009_wo_ist_meine_katze_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>Ist se neben der Mülltonne?</p>
+<p>Ist sie neben der Mülltonne?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
-<p>Ist sie außerhalb des Haus?</p>
+<p>Ist sie draussen, vor der Haus?</p>
 <center>
 <strong>7</strong>
 </center>
