--- a/stories/de/0009_wo_ist_meine_katze.html
+++ b/stories/de/0009_wo_ist_meine_katze.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
 
-<p>Ist se neben der Mülltonne?</p>
+<p>Ist sie neben der Mülltonne?</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
 
-<p>Ist sie außerhalb des Haus?</p>
+<p>Ist sie draussen, vor der Haus?</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
