--- a/stories/index.html
+++ b/stories/index.html
@@ -1755,6 +1755,12 @@
       <td><a name="es0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0049</td>
+      <td><a href="/stories/es/0049_el-arco-iris_slides.html" target="_blank">El arco iris</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0050</td>
       <td><a href="/stories/es/0050_qué-tipo-de-dientes-son_slides.html" target="_blank">¿Qué tipo de dientes son?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1771,6 +1777,12 @@
       <td><a href="/stories/es/0127_juegos-diferentes_slides.html" target="_blank">Juegos diferentes</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0130</td>
+      <td><a href="/stories/es/0130_mi-abuela_slides.html" target="_blank">Mi abuela</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0210</td>
@@ -1801,6 +1813,12 @@
       <td><a href="/stories/es/0327_contar-animales_slides.html" target="_blank">Contar animales</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0341</td>
+      <td><a href="/stories/es/0341_antoni-ke-bo-mang-bale_slides.html" target="_blank">Antoni ke bo mang bale</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0341"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -1975,7 +1993,7 @@
       <td>0049</td>
       <td><a href="http://my.africanstorybook.org/stories/rainbow">The Rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#or0049">or</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+      <td><a href="#es0049">es</a>, <a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#or0049">or</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
     </tr>
     <tr>
       <td>0050</td>
@@ -2107,7 +2125,7 @@
       <td>0130</td>
       <td><a href="http://my.africanstorybook.org/stories/my-grandma">My grandma</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#fa0130">fa</a>, <a href="#gu0130">gu</a>, <a href="#zh0130">zh</a></td>
+      <td><a href="#es0130">es</a>, <a href="#fa0130">fa</a>, <a href="#gu0130">gu</a>, <a href="#zh0130">zh</a></td>
     </tr>
     <tr>
       <td>0134</td>
@@ -2305,7 +2323,7 @@
       <td>0341</td>
       <td><a href="http://my.africanstorybook.org/stories/antoni-ke-bo-mang-bale-0">Antoni ke bo mang bale</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#gu0341">gu</a></td>
+      <td><a href="#es0341">es</a>, <a href="#gu0341">gu</a></td>
     </tr>
     <tr>
       <td>0359</td>
