--- a/stories/index.html
+++ b/stories/index.html
@@ -1269,6 +1269,18 @@
   </thead>
   <tbody>
     <tr>
+      <td>0007</td>
+      <td><a href="/stories/ne/0007_पानीको-खोजी_slides.html" target="_blank">पानीको खोजी</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbscEc2TEN2STZ4TnM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ne0007"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0253</td>
+      <td><a href="/stories/ne/0253_मेरो तस्विर किताब_slides.html" target="_blank">मेरो तस्विर किताब</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbscEc2TEN2STZ4TnM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ne0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0294</td>
       <td><a href="/stories/ne/0294_हजूरआमा-र-केराको-जादू_slides.html" target="_blank">हजूरआमा र केराको जादू</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbscEc2TEN2STZ4TnM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1963,7 +1975,7 @@
       <td>0007</td>
       <td><a href="http://my.africanstorybook.org/stories/looking-water">Looking for water</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#fa0007">fa</a>, <a href="#nn0007">nn</a>, <a href="#no0007">no</a>, <a href="#or0007">or</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
+      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#fa0007">fa</a>, <a href="#ne0007">ne</a>, <a href="#nn0007">nn</a>, <a href="#no0007">no</a>, <a href="#or0007">or</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
     </tr>
     <tr>
       <td>0008</td>
@@ -2245,7 +2257,7 @@
       <td>0253</td>
       <td><a href="http://my.africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#aeb0253">aeb</a>, <a href="#bn0253">bn</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#bn0253">bn</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
