--- a/stories/index.html
+++ b/stories/index.html
@@ -1065,6 +1065,12 @@
       <td><a name="gu0223"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0248</td>
+      <td><a href="/stories/gu/0248_મારી-ઝૂ-નિ-સફર_slides.html" target="_blank">મારી ઝૂ નિ સફર</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0248"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-_slides.html" target="_blank">મારી ચિત્ર કિતાબ </a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2257,7 +2263,7 @@
       <td>0248</td>
       <td><a href="http://my.africanstorybook.org/stories/my-trip-zoo">My trip to the Zoo</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#yue0248">yue</a>, <a href="#zh0248">zh</a></td>
+      <td><a href="#gu0248">gu</a>, <a href="#yue0248">yue</a>, <a href="#zh0248">zh</a></td>
     </tr>
     <tr>
       <td>0253</td>
