--- a/stories/index.html
+++ b/stories/index.html
@@ -71,6 +71,8 @@
   <h2>List of translated stories by language</h2>
   
 <div class="tocbox">
+<li class="toc"><a href="#arabic">Arabic [العربية]</a></li><br>
+
 <li class="toc"><a href="#bengali">Bengali [বাংলা]</a></li><br>
 
 <li class="toc"><a href="#cantonese">Cantonese [粵語]</a></li><br>
@@ -117,6 +119,33 @@
 
 <ol>
 </ol></div>
+  <h3><a name='arabic'>Arabic [العربية]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/ar/0009_أين-قطتي؟_slides.html" target="_blank">أين قطتي؟</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/ar/0087_-أحب-أن-أقرأ_slides.html" target="_blank">!أحب أن أقرأ</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='bengali'>Bengali [বাংলা]</a></h3>
    <ul><table>
   <thead>
@@ -1999,7 +2028,7 @@
       <td>0009</td>
       <td><a href="http://my.africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -2083,7 +2112,7 @@
       <td>0087</td>
       <td><a href="http://my.africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
