add new languages to imagebank explorer

--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -29,8 +29,10 @@
         <option value="alz">Alur</option>
         <option value="am">Amharic</option>
         <option value="anu">Anywak</option>
+        <option value="ar">Arabic</option>
         <option value="luc">Aringati</option>
         <option value="teo">Ateso</option>
+        <option value="bn">Bengali</option>
         <option value="zh">Chinese</option>
         <option value="nyu">Chinyungwe</option>
         <option value="cce">Cicopi</option>
@@ -52,6 +54,7 @@
         <option value="nr">isiNdebele</option>
         <option value="xh">isiXhosa</option>
         <option value="zu">isiZulu</option>
+        <option value="it">Italian</option>
         <option value="jam">Jamaican Creole</option>
         <option value="keo">Kakwa</option>
         <option value="kr">Kanuri</option>
@@ -85,6 +88,7 @@
         <option value="ttj">Rutooro</option>
         <option value="kpz">Sabinyi</option>
         <option value="nso">Sepedi</option>
+        <option value="or">Odia</option>
         <option value="st">Sesotho</option>
         <option value="tn">Setswana</option>
         <option value="ss">siSwati</option>
