--- a/stories/index.html
+++ b/stories/index.html
@@ -131,6 +131,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/ar/0001_الرجل-ذو-القامة-الطويلة_slides.html" target="_blank">الرجل ذو القامة الطويلة</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0009</td>
       <td><a href="/stories/ar/0009_أين-قطتي؟_slides.html" target="_blank">أين قطتي؟</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2004,7 +2010,7 @@
       <td>0001</td>
       <td><a href="http://my.africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
